force-app/main/default/objects/Renewal_Campaign_Automation__mdt/Renewal_Campaign_Automation__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to add the campaign members to the respective campaign for specified project and product (Individual) of metadata.</description>
    <label>Renewal Campaign Automation</label>
    <pluralLabel>Renewal Campaign Automations</pluralLabel>
</CustomObject>