force-app/main/default/objects/Renewal_Campaign_Automation__mdt/fields/Called_From__c.field-meta.xml
<CustomField>
    <fullName>Called_From__c</fullName>
    <label>Called From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>