force-app/main/default/objects/Renewal_Campaign_Automation__mdt/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>ProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>