force-app/main/default/objects/Renewal_Campaign_Automation__mdt/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <label>ProjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>